# claude-code-workflow

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: mcp.json  settings.json  workflow.yaml
scripts/: __init__.py  _bootstrap.py  _pods_conf_path.sh  analyze_results.py  audit_clean_results_body_discipline.py  auto_push_main.sh  autonomous_session_watch.py  backend_poll.py  bootstrap_pod.sh  check_mcp_json_no_secrets.py  check_no_secret_shaped_strings.py  cleanup_pod.py  codex_task.py  critic_mechanization_report.py  cron_autonomous_session_watch.sh  cron_pod_audit.sh  cron_session_summarize.sh  cron_worktree_audit.sh  daily_surface_hook.sh  dispatch_issue.py  eval.py  failure_classifier.py  generate_wrong_answers.py  gh_project.py  guard_repo_root_branch.sh  living_docs.py  mila_socket_refresh.py  new_worktree.sh  patch_happy_daemon.py  persona.sh  pm_queue_report.py  pod.py  pod_audit.py  pod_config.py  pod_disk_guard.py  pod_lifecycle.py  pod_watch.py  pods.conf  pods_ephemeral.json  poll_pipeline.py  (+23 more)
tasks/: REGISTRY.json
tests/: conftest.py  test_autonomous_session_watch.py  test_backend_artifacts_verify.py  test_backend_selector.py  test_campaign_state.py  test_check_mcp_json_no_secrets.py  test_check_no_secret_shaped_strings.py  test_clean_result_critic_planned_vs_actual.py  test_codex_task_output_preservation.py  test_codex_task_post_marker.py  test_codex_task_prompt_delivery.py  test_codex_task_retry_and_stall.py  test_critic_mechanization_report.py  test_dispatch_issue_cli.py  test_env_loading_from_worktree.py  test_failure_classifier.py  (+34 more)
(+117 files in other folders)
